--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource/rock-3d": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
     "@vueuse/core": "^13.0.0",
     "tailwindcss": "^4.0.15",
