--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,7 +7,9 @@ diffusers==0.32.2
 einops==0.8.1
 filelock==3.17.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
 fsspec==2025.3.0
+greenlet==3.1.1
 huggingface-hub==0.29.2
 idna==3.10
 importlib_metadata==8.6.1
@@ -34,11 +36,13 @@ packaging==24.2
 pillow==11.1.0
 protobuf==6.30.1
 psutil==7.0.0
+python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.3
 setuptools==75.8.2
+SQLAlchemy==2.0.39
 sympy==1.13.1
 timm==1.0.15
 tokenizers==0.21.0
