--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,6 +7,7 @@ diffusers==0.32.2
 einops==0.8.1
 filelock==3.17.0
 Flask==3.1.0
+flask_cors=5.0.1
 Flask-SQLAlchemy==3.1.1
 fsspec==2025.3.0
 greenlet==3.1.1
